--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,8 @@ main {
   padding-top: 40px;
   padding-left: 10px;
 }
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2, 
+#cover-text>h3 {
   color: #ffffff;
 }
 
@@ -124,8 +125,8 @@ main {
   font-size: 280%;
 }
 
-#benefits-physical > div, 
-#benefits-mental > div {
+#benefits-physical>div, 
+#benefits-mental>div {
   line-height: 20px;
   margin-bottom: 20px;
 }
@@ -134,9 +135,32 @@ main {
   padding: 0 20px;
 }
 
-#benfits hr {
+#benefits hr {
   border-top: 1px solid #3a3a3a;
   margin: 5px 0;
+}
+
+#circle-cover-bg {
+  background: url('../images/reasons-image.webp') no-repeat top center / cover;
+  height: 90vw;
+  width: 90vw;
+  margin-bottom: 20px;
+  /* Makes the square image into a circle */
+  border-radius: 50%;
+  max-width: 300px;
+  min-width: 300px;
+}
+
+#benefits-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#benefits-physical {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 /* Footer */
@@ -193,6 +217,23 @@ main {
   width: 300px;
   right: 50px;
 }
+ /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical>div,
+    #benefits-mental>div {
+        width: 75%;
+    }
+
+ #benefits-mental>div {
+        text-align: end;
+        align-self: flex-end;
+ }
 
   /* Large devices (laptop and desktops, 992px and up) */
   @media screen and (min-width: 992px) {
