--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,29 @@ main {
   justify-content: center;
 }
 
+#times {
+  background: url('../images/dublin-city.webp') no-repeat center / cover;
+  display: flex;
+  flex-wrap: wrap;
+}
+#times div {
+  color: #fafafa;
+  background-color: rgba(0, 0, 0, .6);
+  padding: 15px;
+  text-align: center;
+  flex-basis: 200px;
+  /* Does not wrapon screens less than 400px wide.
+  Div will expand to fill the available space on it's row */
+  flex-grow: 1;
+  /* Creates a grid of meeting up time dives over the background image */
+  border: 2px solid white;
+}
+
+#times h3 {
+  /* Override the heading color set in general style*/
+  color: #fafafa;
+}
+
 #benefits-physical {
   display: flex;
   align-items: center;
