--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,8 @@ main {
   /* Make main element take up any surplus space to push footer down */
   flex: 1 0 auto;
   margin-top: 47px;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Hero section */
@@ -199,6 +201,74 @@ main {
   line-height: 0;
 }
 
+#signup {
+  background-image: url("../images/signup-image.webp");
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+.text-input {
+    background: transparent;
+    color: #fafafa; 
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;   
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+
+  #signup {
+    background-position: center;
+    position: relative;
+}
+}
+
+#signup-form {
+    max-width: 400px;
+    position: absolute;
+    left: 10%;
+    top: 150px;
+}
+
+.text-input:hover {
+    border-color: #f16c6b;
+}
+
+.join-button:hover {
+    background-color: #fafafa;
+    color: #454b1b;
+}
+
 /* Footer */
 #social-networks {
   text-align: center;
@@ -296,6 +366,7 @@ main {
     #menu a:hover {
       border-bottom: 1px solid #3a3a3a;
     }
+  }
 
     /* Gallery*/
 #photos {
@@ -309,6 +380,7 @@ main {
       display: flex;
       flex-direction: row;
     }
+}
 
 #benefits > div {
   flex: 1;
@@ -329,6 +401,5 @@ main {
 #benefits-physical > div {
   align-self: flex-end;
 }
-
-}
-}
+ 
+  }
